# project2_gusar_dpo-nod

./: .gitignore  Makefile  README.md  metadata.json  pyproject.toml
.github/workflows/: ruff.yml
data/: db_meta.json
demos/: 1_install.cast  2_crud.cast  3_decorators.cast
src/: constants.py  decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
