[project]
name = "project2_gusar_dpo-nod"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman G",email = "gusar.roman.a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prettytable (>=3.16.0,<4.0.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.13.3,<0.14.0)"
]

[tool.poetry]
 packages = [
     { include = "src" },
 ]

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"